# Stonks

./: .gitignore  README.md  news.py
backend/hft_core/: CMakeLists.txt  run_sim.py  setup.py  test.py
backend/hft_core/.cache/clangd/index/: order_book.cpp.B0B1D64584719838.idx  order_book.h.DB99C3084883AE8C.idx
backend/hft_core/.eggs/pybind11-3.0.1-py3.12.egg/EGG-INFO/: requires.txt
backend/hft_core/include/: MarketFeeder.hpp  OrderBook.hpp  PPOModel.hpp  Strategy.hpp  Types.hpp
backend/hft_core/include/engine/: order_book.h
backend/hft_core/models/: ppo_hft.onnx  ppo_hft.onnx.data
backend/hft_core/src/: OrderBook.cpp  PPOModel.cpp  Strategy.cpp  main.cpp
backend/hft_core/src/engine/: order_book.cpp
backend/intelligence_service/: requirements.txt
backend/intelligence_service/app/: main.py
backend/intelligence_service/app/api/: endpoints.py
backend/intelligence_service/app/ml_engine/trader_bot/: enviornment.py  eval.py  export.py  trainer.py
backend/intelligence_service/app/ml_engine/trader_bot/model/: vec_normalize_v2.pkl
backend/intelligence_service/app/schemas/: payloads.py
backend/intelligence_service/app/services/: news_fetcher.py
backend/intelligence_service/app/services/scrapers/: ticker_news.py  universal_feed.py
backend/services/: market_feeder.py
